--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,14 @@ main {
   overflow-y: auto;
 }
 
+.user-nav{
+  width: 2.5rem;
+  min-width: 40px;
+  height: 2.5rem;
+  min-height: 40px;
+  border-radius: 400px;
+  cursor: pointer;
+}
 
 .btn-primary{
   background-color: #7D6E83 !important;
@@ -114,6 +122,7 @@ main {
   margin-right: 1.5rem !important;
   justify-items: center;
   text-decoration: none;
+  color: grey;
 }
 
 .filter-picker{
@@ -144,16 +153,20 @@ main {
 
 .img-rcmCate {
   position: relative;
-  width: 170px;
-  height: 199px;
-  margin-left: 26px;
+  width: 100%;
+  height: 180%;
   z-index: 1;
 }
+
 #shape {
   position: absolute;
-  bottom: 46px;
-  height: 112px;
-  width: 216px;
+  bottom: 20%;
+  height: 50%;
+  width: 120%;
+  left: -10%;
+  right: -10%;
+  margin-left: auto;
+  margin-right: auto;
   background-color: rgba(223, 211, 195, 1);
   box-shadow: 0px 2px 4px rgba(76, 92, 107, 0.15);
   border-radius: 10px;
@@ -274,6 +287,18 @@ hr.solid-vert {
   border-color: #796f7c !important;
 }
 
+.active.menu-item.nav-link{
+  background-color: white !important;
+  color : #7D6E83;
+  border-bottom: 2px solid #7d6e83;
+}
+
+.active.cart-item.nav-link{
+  background-color: white !important;
+  color : #7D6E83;
+  border-bottom: 2px solid #7d6e83;
+}
+
 .image-form{
   position: relative;
   cursor: pointer;
@@ -309,6 +334,7 @@ hr.solid-vert {
   align-self: flex-end;
 }
 
+
 .form-wrapper{
   color:#444;
   border:1px solid #CCC;
@@ -322,7 +348,7 @@ hr.solid-vert {
 
 @media (max-width: 1200px) {
   .search-bar{
-    width: 250px !important;
+    width: 200px !important;
   }
   .menu-item {
     margin-right: 0.75rem !important;
@@ -384,6 +410,12 @@ hr.solid-vert {
   }
 }
 
+@media (max-width: 768px){
+  #shopping-text{
+    display: none;
+  }
+}
+
 /* Sidebar */
 .fixed-bar{
   min-height: 100vh;
@@ -425,6 +457,13 @@ hr.solid-vert {
   font-weight: 400;
   font-size: 20px;
   line-height: 30px;
+}
+
+#p4{
+  font-family: 'DM Serif Display';
+  font-size: 36px;
+  line-height: 48px;
+  color: #D0B8A8;
 }
 
 .view {
