--- a/src/index.css
+++ b/src/index.css
@@ -168,7 +168,7 @@ table {
 
 .img-bestSeller {
   width: 100%;
-  border-radius: 10pt 10pt 0 0;
+  border-radius: .5rem .5rem 0 0;
 }
 
 .img-cart {
@@ -262,8 +262,7 @@ table {
 }
 
 .copy-right {
-  left: 0;
-  position: absolute;
+  min-width: fit-content;
   transform: rotate(-90deg);
   color: #fff;
   margin-left: -30px;
@@ -386,9 +385,75 @@ hr.solid-vert {
   }
 }
 
+/* Sidebar */
+.fixed-bar{
+  min-height: 100%;
+  min-width: 17rem;
+  width: 17rem;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.4s;
+}
+
+.admin-container{
+  width: (100vw - 17rem);
+  margin: 0 0 0 17rem !important;
+  transition: all 0.4s;
+}
+
+#p1 {
+  font-family: 'Kantumruy', sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 48px;
+  color: #7D6E83;
+}
+#p2 {
+
+  font-family: 'DM Serif Display';
+  font-style: italic;
+  font-size: 56px;
+  line-height: 48px;
+  color: #D0B8A8;
+}
+#p3 {
+
+  font-family: 'Work Sans';
+  font-style: italic;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+#p4{
+  font-family: 'DM Serif Display';
+  font-size: 36px;
+  line-height: 48px;
+  color: #D0B8A8;
+}
+
+.view {
+  font-family: 'Work Sans';
+}
+
 @media (max-width: 992px){
   .profile-card{
     margin-top: 1rem !important;
+  }
+  .fixed-bar{
+    min-width: 5rem;
+    width: 5rem;
+  }
+  
+  .admin-container{
+    width: (100vw - 5rem);
+    margin: 0 0 0 5rem !important;
+  }
+  .nav-ttl{
+    display: none;
   }
   .filter-picker{
     width: 50%;
@@ -439,60 +504,6 @@ hr.solid-vert {
   #shopping-text{
     display: none;
   }
-}
-
-/* Sidebar */
-.fixed-bar{
-  min-height: 100vh;
-  min-width: 17rem;
-  width: 17rem;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
-  transition: all 0.4s;
-}
-
-.admin-container{
-  width: (100vw - 17rem);
-  margin: 0 0 0 17rem !important;
-  transition: all 0.4s;
-}
-
-#p1 {
-  font-family: 'Kantumruy', sans-serif;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 48px;
-  color: #7D6E83;
-}
-#p2 {
-
-  font-family: 'DM Serif Display';
-  font-style: italic;
-  font-size: 56px;
-  line-height: 48px;
-  color: #D0B8A8;
-}
-#p3 {
-
-  font-family: 'Work Sans';
-  font-style: italic;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-#p4{
-  font-family: 'DM Serif Display';
-  font-size: 36px;
-  line-height: 48px;
-  color: #D0B8A8;
-}
-
-.view {
-  font-family: 'Work Sans';
 }
 
 @font-face {
